// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UpcomingDepartures renders upcoming SL bus predictions 1`] = `
Array [
  <h3>
    Upcoming Departures
  </h3>,
  <table
    className="schedule-table schedule-table--upcoming"
  >
    <thead
      className="schedule-table__header"
    >
      <tr
        className="schedule-table__row-header"
      >
        <th
          className="schedule-table__row-header-label"
          scope="col"
        >
          Destinations
        </th>
        <th
          scope="col"
        >
          Trip Details
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        aria-controls="trip-42253399-20:45-SLNoTransitway"
        aria-expanded={false}
        className="schedule-table__row"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={0}
      >
        <td
          className="schedule-table__td schedule-table__td--flex-end"
        >
          <div
            className="schedule-table__row-route"
          >
            <div
              className="schedule-table__row-route-pill m-route-pills"
            >
              <div
                className="u-bg--silver-line"
              >
                SL2
              </div>
            </div>
             
            Silver Line Way
          </div>
        </td>
        <td
          className="schedule-table__time schedule-table__td--flex-end u-bold"
        >
          4
           
          min
        </td>
        <td
          className="schedule-table__td schedule-table__td--flex-end"
        >
          <span
            className="c-expandable-block__header-caret"
            dangerouslySetInnerHTML={
              Object {
                "__html": "&#xF107;",
              }
            }
          />
        </td>
      </tr>
      <tr
        aria-controls="trip-42253773-20:45-SLNoTransitway"
        aria-expanded={false}
        className="schedule-table__row"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={0}
      >
        <td
          className="schedule-table__td schedule-table__td--flex-end"
        >
          <div
            className="schedule-table__row-route"
          >
            <div
              className="schedule-table__row-route-pill m-route-pills"
            >
              <div
                className="u-bg--silver-line"
              >
                SL2
              </div>
            </div>
             
            Drydock
          </div>
        </td>
        <td
          className="schedule-table__time schedule-table__td--flex-end u-bold"
        >
          7
           
          min
        </td>
        <td
          className="schedule-table__td schedule-table__td--flex-end"
        >
          <span
            className="c-expandable-block__header-caret"
            dangerouslySetInnerHTML={
              Object {
                "__html": "&#xF107;",
              }
            }
          />
        </td>
      </tr>
      <tr
        aria-controls="trip-42253710-20:45-SLNoTransitway"
        aria-expanded={false}
        className="schedule-table__row"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={0}
      >
        <td
          className="schedule-table__td schedule-table__td--flex-end"
        >
          <div
            className="schedule-table__row-route"
          >
            <div
              className="schedule-table__row-route-pill m-route-pills"
            >
              <div
                className="u-bg--silver-line"
              >
                SL2
              </div>
            </div>
             
            Drydock
          </div>
        </td>
        <td
          className="schedule-table__time schedule-table__td--flex-end u-bold"
        >
          17
           
          min
        </td>
        <td
          className="schedule-table__td schedule-table__td--flex-end"
        >
          <span
            className="c-expandable-block__header-caret"
            dangerouslySetInnerHTML={
              Object {
                "__html": "&#xF107;",
              }
            }
          />
        </td>
      </tr>
      <tr
        aria-controls="trip-42253603-20:45-SLNoTransitway"
        aria-expanded={false}
        className="schedule-table__row"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={0}
      >
        <td
          className="schedule-table__td schedule-table__td--flex-end"
        >
          <div
            className="schedule-table__row-route"
          >
            <div
              className="schedule-table__row-route-pill m-route-pills"
            >
              <div
                className="u-bg--silver-line"
              >
                SL2
              </div>
            </div>
             
            Drydock
          </div>
        </td>
        <td
          className="schedule-table__time schedule-table__td--flex-end u-bold"
        >
          27
           
          min
        </td>
        <td
          className="schedule-table__td schedule-table__td--flex-end"
        >
          <span
            className="c-expandable-block__header-caret"
            dangerouslySetInnerHTML={
              Object {
                "__html": "&#xF107;",
              }
            }
          />
        </td>
      </tr>
    </tbody>
  </table>,
]
`;

exports[`UpcomingDepartures renders upcoming bus predictions 1`] = `
Array [
  <h3>
    Upcoming Departures
  </h3>,
  <table
    className="schedule-table schedule-table--upcoming"
  >
    <thead
      className="schedule-table__header"
    >
      <tr
        className="schedule-table__row-header"
      >
        <th
          className="schedule-table__row-header-label"
          scope="col"
        >
          Destinations
        </th>
        <th
          scope="col"
        >
          Trip Details
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        aria-controls="trip-41894323"
        aria-expanded={false}
        className="schedule-table__row"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={0}
      >
        <td
          className="schedule-table__td schedule-table__td--flex-end"
        >
          <div
            className="schedule-table__row-route"
          >
            <div
              className="schedule-table__row-route-pill m-route-pills"
            >
              <div
                className="u-bg--bus"
              >
                1
              </div>
            </div>
             
            Harvard
          </div>
        </td>
        <td
          className="schedule-table__time schedule-table__td--flex-end u-bold"
        >
          7
           
          min
        </td>
        <td
          className="schedule-table__td schedule-table__td--flex-end"
        >
          <span
            className="c-expandable-block__header-caret"
            dangerouslySetInnerHTML={
              Object {
                "__html": "&#xF107;",
              }
            }
          />
        </td>
      </tr>
      <tr
        aria-controls="trip-41894242"
        aria-expanded={false}
        className="schedule-table__row"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={0}
      >
        <td
          className="schedule-table__td schedule-table__td--flex-end"
        >
          <div
            className="schedule-table__row-route"
          >
            <div
              className="schedule-table__row-route-pill m-route-pills"
            >
              <div
                className="u-bg--bus"
              >
                1
              </div>
            </div>
             
            Harvard
          </div>
        </td>
        <td
          className="schedule-table__time schedule-table__td--flex-end u-bold"
        >
          30
           
          min
        </td>
        <td
          className="schedule-table__td schedule-table__td--flex-end"
        >
          <span
            className="c-expandable-block__header-caret"
            dangerouslySetInnerHTML={
              Object {
                "__html": "&#xF107;",
              }
            }
          />
        </td>
      </tr>
      <tr
        aria-controls="trip-41894243"
        aria-expanded={false}
        className="schedule-table__row"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={0}
      >
        <td
          className="schedule-table__td schedule-table__td--flex-end"
        >
          <div
            className="schedule-table__row-route"
          >
            <div
              className="schedule-table__row-route-pill m-route-pills"
            >
              <div
                className="u-bg--bus"
              >
                1
              </div>
            </div>
             
            Harvard
          </div>
        </td>
        <td
          className="schedule-table__time schedule-table__td--flex-end u-bold"
        >
          41
           
          min
        </td>
        <td
          className="schedule-table__td schedule-table__td--flex-end"
        >
          <span
            className="c-expandable-block__header-caret"
            dangerouslySetInnerHTML={
              Object {
                "__html": "&#xF107;",
              }
            }
          />
        </td>
      </tr>
      <tr
        aria-controls="trip-41894244"
        aria-expanded={false}
        className="schedule-table__row"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={0}
      >
        <td
          className="schedule-table__td schedule-table__td--flex-end"
        >
          <div
            className="schedule-table__row-route"
          >
            <div
              className="schedule-table__row-route-pill m-route-pills"
            >
              <div
                className="u-bg--bus"
              >
                1
              </div>
            </div>
             
            Harvard
          </div>
        </td>
        <td
          className="schedule-table__time schedule-table__td--flex-end u-bold"
        >
          50
           
          min
        </td>
        <td
          className="schedule-table__td schedule-table__td--flex-end"
        >
          <span
            className="c-expandable-block__header-caret"
            dangerouslySetInnerHTML={
              Object {
                "__html": "&#xF107;",
              }
            }
          />
        </td>
      </tr>
    </tbody>
  </table>,
]
`;

exports[`UpcomingDepartures renders upcoming cr predictions 1`] = `
Array [
  <h3>
    Upcoming Departures
  </h3>,
  <table
    className="schedule-table schedule-table--upcoming"
  >
    <thead
      className="schedule-table__header"
    >
      <tr
        className="schedule-table__row-header"
      >
        <th
          className="schedule-table__row-header-label"
          scope="col"
        >
          Destinations
        </th>
        <th
          scope="col"
        >
          Trip Details
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        aria-controls="trip-CR-Weekday-Fall-19-783"
        aria-expanded={false}
        className="schedule-table__row"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={0}
      >
        <td
          className="schedule-table__headsign"
        >
          <span
            aria-hidden="false"
            className="notranslate c-svg__icon"
            dangerouslySetInnerHTML={
              Object {
                "__html": "SVG",
              }
            }
          />
        </td>
        <td
          className="schedule-table__headsign"
        >
          Readville
          <div>
            Train 783
          </div>
        </td>
        <td>
          <div
            className="schedule-table__time-container"
          >
            <div
              className="schedule-table__time u-bold"
            >
              04:15 PM
            </div>
          </div>
          <div
            className="u-nowrap text-right"
          >
            Departed
          </div>
        </td>
        <td
          className="schedule-table__td schedule-table__td--flex-end"
        >
          <span
            className="c-expandable-block__header-caret"
            dangerouslySetInnerHTML={
              Object {
                "__html": "&#xF107;",
              }
            }
          />
        </td>
      </tr>
      <tr
        aria-controls="trip-CR-Weekday-Fall-19-785"
        aria-expanded={false}
        className="schedule-table__row"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={0}
      >
        <td
          className="schedule-table__headsign"
        >
          <span
            aria-hidden="false"
            className="notranslate c-svg__icon"
            dangerouslySetInnerHTML={
              Object {
                "__html": "SVG",
              }
            }
          />
        </td>
        <td
          className="schedule-table__headsign"
        >
          Readville
          <div>
            Train 785
          </div>
        </td>
        <td
          className="schedule-table__td schedule-table__td--flex-end"
        >
          <div
            className="schedule-table__time-container"
          >
            <div
              className="schedule-table__time u-bold"
            >
              5:00 PM
            </div>
          </div>
          <div
            className="u-nowrap text-right u-bold"
          >
            <span
              className="schedule-table__status"
            >
              On time
            </span>
            <span
              className="schedule-table__track"
            >
              
            </span>
          </div>
        </td>
        <td
          className="schedule-table__td schedule-table__td--flex-end"
        >
          <span
            className="c-expandable-block__header-caret"
            dangerouslySetInnerHTML={
              Object {
                "__html": "&#xF107;",
              }
            }
          />
        </td>
      </tr>
      <tr
        aria-controls="trip-CR-Weekday-Fall-19-787"
        aria-expanded={false}
        className="schedule-table__row"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={0}
      >
        <td
          className="schedule-table__headsign"
        >
          <span
            aria-hidden="false"
            className="notranslate c-svg__icon"
            dangerouslySetInnerHTML={
              Object {
                "__html": "SVG",
              }
            }
          />
        </td>
        <td
          className="schedule-table__headsign"
        >
          Readville
          <div>
            Train 787
          </div>
        </td>
        <td
          className="schedule-table__td schedule-table__td--flex-end"
        >
          <div
            className="schedule-table__time-container"
          >
            <div
              className="schedule-table__time u-bold"
            >
              5:45 PM
            </div>
          </div>
          <div
            className="u-nowrap text-right u-bold"
          >
            <span
              className="schedule-table__status"
            >
              On time
            </span>
            <span
              className="schedule-table__track"
            >
              
            </span>
          </div>
        </td>
        <td
          className="schedule-table__td schedule-table__td--flex-end"
        >
          <span
            className="c-expandable-block__header-caret"
            dangerouslySetInnerHTML={
              Object {
                "__html": "&#xF107;",
              }
            }
          />
        </td>
      </tr>
    </tbody>
  </table>,
]
`;

exports[`renders 1`] = `
<div
  className="schedule-finder"
>
  <h2
    className="h3 schedule-finder__heading"
  >
    <span
      aria-hidden="true"
      className="notranslate c-svg__icon"
      dangerouslySetInnerHTML={
        Object {
          "__html": "SVG",
        }
      }
    />
     Schedule Finder
  </h2>
  <div>
    Choose a stop to get schedule information and real-time departure predictions.
  </div>
  <div
    className="c-select-custom__container "
    id="sf_direction_select_container"
    onClick={[Function]}
    onKeyUp={[Function]}
    role="button"
    tabIndex={0}
  >
    <select
      className="c-select-custom"
      id="sf_direction_select"
      onChange={[Function]}
      onKeyUp={[Function]}
      value=""
    >
      <option
        value=""
      >
        Choose a direction
      </option>
      <option
        value="0"
      >
        INBOUND
         
        Oak Grove
      </option>
      <option
        value="1"
      >
        OUTBOUND
         
        Forest Hills
      </option>
    </select>
    <span
      aria-hidden="true"
      className="notranslate c-svg__icon c-select-custom__arrow"
      dangerouslySetInnerHTML={
        Object {
          "__html": "SVG",
        }
      }
    />
  </div>
  <div
    className="c-select-custom__container "
    id="sf_origin_select_container"
    onClick={[Function]}
    onKeyUp={[Function]}
    role="button"
    tabIndex={0}
  >
    <select
      className="c-select-custom c-select-custom--noclick"
      id="sf_origin_select"
      onChange={[Function]}
      onKeyUp={[Function]}
      value=""
    >
      <option
        value=""
      >
        Choose an origin stop
      </option>
      <option
        value="place-welln"
      >
        Wellington
      </option>
      <option
        value="123"
      >
        Abc
      </option>
      <option
        value="741"
      >
        SL
      </option>
    </select>
    <span
      aria-hidden="true"
      className="notranslate c-svg__icon c-select-custom__arrow"
      dangerouslySetInnerHTML={
        Object {
          "__html": "SVG",
        }
      }
    />
  </div>
  <div
    className="text-right"
  >
    <input
      className="btn btn-primary"
      onClick={[Function]}
      type="submit"
      value="Get schedules"
    />
  </div>
</div>
`;
